@@ -1,1 +1,1 @@
-{"version":"5.6-dev","releasedate":"2017-03-23"}
+{"version":"5.6-dev","releasedate":"2017-04-06"}
